@@ -3670,6 +3670,8 @@ STR_6372    :The specified path contains a RollerCoaster Tycoon 1 installation, 
 STR_6373    :Toggle clearance checks
 STR_6374    :C
 STR_6375    :Unknown Ride
+STR_6376    :{WINDOW_COLOUR_2}Ride vehicle:{NEWLINE}{BLACK}{STRINGID} for {STRINGID}
+STR_6377    :{WINDOW_COLOUR_2}Type: {BLACK}{STRINGID} for {STRINGID}
 
 #############
 # Scenarios #
