@@ -3911,6 +3911,9 @@ enum
 
     STR_UNKNOWN_RIDE = 6375,
 
+    STR_RESEARCH_VEHICLE_LABEL = 6376,
+    STR_RESEARCH_TYPE_LABEL_VEHICLE = 6377,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
